# EPITECH-Zappy-Server

./: .gitignore  Makefile  README.md
assets/: help.txt
includes/: ai.h  clients.h  gui.h  includes.h  parsing.h  utils.h  zappy_server.h
libs/: Makefile
libs/debug/include/: debug.h
libs/display/: Makefile
libs/display/include/: display.h
libs/display/src/: buffer.c  log.c
libs/dlist/: Makefile
libs/dlist/includes/: dlist.h
libs/dlist/src/: dl_apply.c  dl_find.c
libs/heap/: Makefile
libs/heap/includes/: heap.h
libs/heap/src/: garbage_collector.c  garbage_utils.c
libs/includes/: dlist.h  heap.h  input_output.h
libs/input_output/: Makefile
libs/input_output/includes/: input_output.h
libs/input_output/src/: buffer.c  log.c
libs/linked_list/: Makefile
libs/linked_list/include/: linked_list.h
libs/linked_list/src/: dl_apply.c  dl_clear.c  dl_empty.c  dl_erase.c  dl_extract.c  dl_find.c  dl_insert.c  dl_length.c  dl_pop.c  dl_push.c
libs/logging/: Makefile
libs/logging/includes/: logging.h
libs/logging/src/: log.c  log_file.c
libs/mlist/: Makefile
libs/mlist/includes/: mlist.h
libs/mlist/src/: m_list_add_at_pos.c  m_list_apply.c  m_list_destroy.c  m_list_find.c  m_list_get.c  m_list_new.c  m_list_pop.c  m_list_size.c
src/: main.c
src/clients/: ai_connection.c  clients.c  egg.c  handle_ai.c  interactions.c  new_connection.c  reads.c  writes.c
src/clients/handle_ai/: command_broadcast.c  command_co_nbr.c  command_eject.c  command_fork.c  command_forward.c  command_incantation.c  command_inventory.c  command_left.c  command_look.c  command_right.c  command_set.c  command_take.c  main.c
src/clients/handle_gui/: bct.c  ebo.c  edi.c  enw.c  gui_send.c  main.c  mct.c  msz.c  pbc.c  pdi.c  pdr.c  pex.c  pfk.c  pgt.c  pic.c  pie.c  pin.c  plv.c  pnw.c  ppo.c  seg.c  sgt.c  smg.c  sst.c  suc.c  tna.c
src/parsing/: parsing.c  parsing_check.c  parsing_gestion.c
src/server/init/: connection.c  destroy.c  game.c  get.c  inits.c  ressources.c  (+1 more)
src/utils/: digit.c  file.c  inits.c  ressource_from_index.c  round_world.c  signal.c  str_append.c  str_to_word_array.c  str_to_word_array.cpp  tab.c  time.c
tests/: CMakeLists.txt  run_coding_style.sh  run_unit_tests.sh  tests.cpp
tests/server_init/: connection.c  game.c
tests/utils/: digit.c  ressource_from_index.c  round_world.c  stowa.c  str_append.c  tab.c
(+8 files in other folders)
